# Project-Uranus

./: Cargo.toml
backend/: Cargo.toml
backend/src/: api_server.rs  game_server.rs  main.rs  router.rs  session.rs
backend/src/api_server/: http_handlers.rs  websockets.rs  ws_handlers.rs
backend/src/api_server/http_handlers/: requests.rs  responses.rs
backend/src/api_server/websockets/: ws_game_session.rs
backend/src/core/: data_type.rs  lib.rs
backend/src/core/game/: field.rs  mod.rs
backend/src/examples/: web_socket.rs
backend/src/game_server/: requests.rs
backend/src/game_server/requests/: connect.rs  player_turn.rs  register.rs
backend/src/http_handlers/: health_check.rs  responses.rs
backend/src/utils/: json.rs
frontend/src/: App.js  config.js
frontend/src/api/: Api.js
frontend/src/components/Game/: Game.jsx  Game.module.css
frontend/src/components/Tile/: Tile.jsx  Tile.module.css
src/: game_server.rs  http_handlers.rs  main test.rs  main.rs
src/api_server/: http_handlers.rs
src/api_server/http_handlers/: requests.rs
src/game_server/: requests.rs  room.rs
src/game_server/requests/: connect.rs  register.rs
