[package]
name = "uranus"
version = "0.1.0"
authors = ["Alexey Ivanov <alexeyivanov1861@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0.0", features = ["v4"] }
rand = "0.7"
rocket = "0.5.0-rc.2"
env_logger = "0.8"
log = "0.4"

[lib]
name="core"
path = "src/core/lib.rs"